<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Criar layoutda tela de login do app" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetails"
                style="@style/ButtonTaskTheme"
                android:layout_width="wrap_content"
                android:text="@string/btn_details"
                app:backgroundTint="@color/color_details"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toStartOf="@+id/btnEdit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnEdit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                style="@style/ButtonTaskTheme"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnDelete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDetails"
                app:layout_constraintTop_toBottomOf="@+id/textDescription"
                app:layout_constraintVertical_bias="0.675" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                style="@style/ButtonTaskTheme"
                android:layout_width="wrap_content"
                android:text="@string/btn_remove"
                app:backgroundTint="@color/color_delete"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnEdit"
                app:layout_constraintTop_toTopOf="@+id/btnEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>